@@ -1044,7 +1044,8 @@ _sys_nerr DATA
 _tell
 _telli64
 _tempnam
-_time32 DATA
+_time32
+time == _time32
 _time64
 _timezone DATA
 _tolower
