@@ -1483,6 +1483,7 @@ _telli64
 _tempnam
 _time32
 _time64
+time == _time64
 _timezone DATA
 _tolower
 _tolower_l
