@@ -1039,6 +1039,7 @@ _tempnam
 _tempnam_dbg
 _time32
 _time64
+time == _time64
 _timezone DATA
 _tolower
 _tolower_l
